# papas-lamp

./: .envrc_example  .gitignore  .pre-commit-config.yaml  README.md  default.nix  flake.nix  hinge_lever.step  pyproject-overrides.nix  pyproject.toml  shell-python.nix
lamp/: test.py
lampapy/: __main__.py  assy.py  assy_arms.py  assy_leaf.py  explore_nesting_compound_joints.py  hexacon_pin.py  icosahedron_joint.py  insert.py  leaf.py  outer_ring_with_slider.py  platonic_solid_joints.py  simple_t.py  upolygons_hinges_2.py  utils.py
local/: .gitignore
output/: back.dxf  bracket_in.dxf  bracket_out.dxf  flr.dxf  flr_align.dxf  front.dxf  ringen.step  ringen_groot.step  ringen_groot2.step  ringen_groot3.step  ringen_groots.step  roof.dxf  roof_b.dxf  side.dxf  side_b.dxf  slot.dxf  spring.dxf
papas-lamp/: Upolygons_hinges_2.py  __init__.py  __main__.py  assy.py  face_outward_inward.py  hexacon_pin.py  hinge_lever.py  lamp_base.py  leaf.py  simple_t.py
src/: LCD-cover-ORIGINAL-MK3.py  Try_out_stuff.py  Upolygons_hinges_2.py  birdhouse.py  blokje.py  brack.py  bracket.py  bub.py  chamferround.py  complex_with_letters.py  cool_fillets.py  cq_warehouse_jagged.py  firstpart.py  gear.py  hinge_lever.py  kubus_itertools.py  lamp_base.py  lego.py  outer_ring_with_slider.py  polygons_hinge.py  postcap.py  rabatdeel.py  ring.py  ringen_passen.py  selector.py  sleeve.py  superelipsis.py  surface_modeling.py  teacup.py  text.py  toby_cap.py  vslotrail.py
src/imported/: lekdorpel.dxf  rabatdeel.dxf  startprofile.dxf  ventilation_30.dxf
