[project]
name = "lamp"
version = "0.1.0"
description = "A nice mechanical lamp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ocp-vscode>=2.6.1",
    "build123d>=0.8.0",
    "build123d-ease>=0.2.0.0"
]

[project.scripts]
hello = "lamp:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lamp"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.6",
    "pyright>=1.1.391",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "ALL",
]

ignore = [
    "D203", # Fix warning.
    "D213", # Fix warning.
    "COM812", # Fix warning.
    "ISC001", # Fix warning.
]

[tool.ruff.lint.per-file-ignores]
"./tests/**/*.py" = [
    "S101", # Allow asserts.
]
