[project]
name = "lampapy"
version = "0.1.0"
description = "A nice mechanical lamp written in Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ocp-vscode>=2.6.1",
    "build123d>=0.8.0",
    "build123d-ease>=0.2.0.0",
]

[project.scripts]
hello = "lampapa:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lampapa"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.6",
    "pyright>=1.1.391",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "ALL",
]

ignore = [
    "ANN101",
    "ANN102",
    "COM812", # Fix warning.
    "D100",   # Missing docstring in public module - Google doesn't require docstrings for every module
    "D101",   # Missing docstring in public class - Google doesn't require docstrings for every class
    "D102",   # Missing docstring in public method - Google doesn't require docstrings for every method
    "D103",   # Missing docstring in public function - Google doesn't require docstrings for every function
    "D107",   # Missing docstring in __init__ - Google doesn't require docstrings for __init__ methods
    "D203",   # 1 blank line required before class docstring - Google style doesn't require this
    "D213",   # Multi-line docstring summary should start at the second line - Google prefers docstrings to start on the first line
    "D203",   # Fix warning.
    "D213",   # Fix warning.
    "ISC001", # Fix warning.
    "T201",   # We just like to print alot.
    "PLR0913", # We don't want a maximum of 5 arguments to a function.
    "SIM117",  #nested contexts are the power of build123d.
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"./tests/**/*.py" = [
    "S101", # Allow asserts.
]
